# faume-pricing-analysis

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
mapping/: catalog_mapping.json  catalog_mappings.json  vinted_catalog.json  vinted_color.json  vinted_material.json
