[project]
name = "faume-pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "numpy",
    "pillow",
    "matplotlib",
    "urllib3>=2.6.3",
    "tqdm>=4.67.3",
]
